@@ -1,7 +1,10 @@
 package com.hamza.howler.controllers;
 
 import com.hamza.howler.response.AuthResponse;
+import org.springframework.core.io.ByteArrayResource;
+import org.springframework.core.io.Resource;
 import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RestController;
@@ -18,8 +21,14 @@ public class TestController {
     }
 
     @GetMapping("/.well-known/pki-validation/6B7EF7003F13D16B83A0718BB760E5A9.txt")
-    public String ssl()throws Exception{
+    public ResponseEntity<Resource> ssl()throws Exception{
+
         Path path = Path.of("C:\\JavaProjects\\howler\\howler-backend\\6B7EF7003F13D16B83A0718BB760E5A9.txt");
-        return Files.readString(path);
+        ByteArrayResource resource = new ByteArrayResource(Files.readAllBytes(path));
+
+        return ResponseEntity.ok()
+                .contentType(MediaType.APPLICATION_OCTET_STREAM)
+                .body(resource);
+
     }
 }
